frb_example/pure_dart_multi/rust/extra_c_output_path_2/c_output_3.h

typedef struct DartCObject DartCObject;
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_CrossSharedStructInBlock1And2 {
  struct wire_uint_8_list *name;
} wire_CrossSharedStructInBlock1And2;
typedef struct wire_SharedComplexEnumInAllBlocks_Empty {

} wire_SharedComplexEnumInAllBlocks_Empty;
typedef struct wire_SharedComplexEnumInAllBlocks_Primitives {
  int32_t int32;
  double float64;
  bool boolean;
} wire_SharedComplexEnumInAllBlocks_Primitives;
typedef struct wire_SharedComplexEnumInAllBlocks_Nested {
  struct wire_SharedComplexEnumInAllBlocks *field0;
} wire_SharedComplexEnumInAllBlocks_Nested;
typedef struct wire_SharedComplexEnumInAllBlocks_Optional {
  int32_t *field0;
  struct wire_uint_8_list *field1;
} wire_SharedComplexEnumInAllBlocks_Optional;
typedef struct wire_SharedComplexEnumInAllBlocks_Buffer {
  struct wire_float_32_list *field0;
} wire_SharedComplexEnumInAllBlocks_Buffer;
typedef struct wire_SharedComplexEnumInAllBlocks_Enums {
  int32_t field0;
} wire_SharedComplexEnumInAllBlocks_Enums;
typedef struct wire_SharedComplexEnumInAllBlocks_BytesArray {
  struct wire_uint_8_list *field0;
} wire_SharedComplexEnumInAllBlocks_BytesArray;
typedef union SharedComplexEnumInAllBlocksKind {
  struct wire_SharedComplexEnumInAllBlocks_Empty *Empty;
  struct wire_SharedComplexEnumInAllBlocks_Primitives *Primitives;
  struct wire_SharedComplexEnumInAllBlocks_Nested *Nested;
  struct wire_SharedComplexEnumInAllBlocks_Optional *Optional;
  struct wire_SharedComplexEnumInAllBlocks_Buffer *Buffer;
  struct wire_SharedComplexEnumInAllBlocks_Enums *Enums;
  struct wire_SharedComplexEnumInAllBlocks_BytesArray *BytesArray;
} SharedComplexEnumInAllBlocksKind;
typedef struct wire_SharedComplexEnumInAllBlocks {
  int32_t tag;
  union SharedComplexEnumInAllBlocksKind *kind;
} wire_SharedComplexEnumInAllBlocks;
typedef struct wire_SharedStructInBlock2And3 {
  int32_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_SharedStructInBlock2And3;
typedef struct DartCObject *WireSyncReturn;
typedef struct wire_StructOnlyForBlock3 {
  int64_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_StructOnlyForBlock3;
typedef struct wire_StructDefinedInBlock3 {
  struct wire_uint_8_list *name;
} wire_StructDefinedInBlock3;
typedef struct wire_EnumDefinedInBlock3_Quit {

} wire_EnumDefinedInBlock3_Quit;
typedef struct wire_EnumDefinedInBlock3_Move {
  int32_t x;
  int32_t y;
} wire_EnumDefinedInBlock3_Move;
typedef struct wire_EnumDefinedInBlock3_Write {
  struct wire_uint_8_list *field0;
} wire_EnumDefinedInBlock3_Write;
typedef struct wire_EnumDefinedInBlock3_ChangeColor {
  int32_t field0;
  int32_t field1;
  int32_t field2;
} wire_EnumDefinedInBlock3_ChangeColor;
typedef union EnumDefinedInBlock3Kind {
  struct wire_EnumDefinedInBlock3_Quit *Quit;
  struct wire_EnumDefinedInBlock3_Move *Move;
  struct wire_EnumDefinedInBlock3_Write *Write;
  struct wire_EnumDefinedInBlock3_ChangeColor *ChangeColor;
} EnumDefinedInBlock3Kind;
typedef struct wire_EnumDefinedInBlock3 {
  int32_t tag;
  union EnumDefinedInBlock3Kind *kind;
} wire_EnumDefinedInBlock3;
void wire_test_shared_struct_in_block_3_for_2_and_3(int64_t port_,
                                                    struct wire_SharedStructInBlock2And3 *custom,
                                                    struct wire_uint_8_list *s,
                                                    int32_t i);
void wire_test_cross_shared_struct_in_block_3_for_2_and_3(int64_t port_,
                                                          struct wire_uint_8_list *name);
WireSyncReturn wire_test_cross_shared_struct_in_sync_in_block_3_for_2_and_3(struct wire_uint_8_list *name);
void wire_test_unique_struct_3(int64_t port_,
                               struct wire_StructOnlyForBlock3 *custom,
                               struct wire_uint_8_list *s,
                               int64_t i);
void wire_test_struct_defined_in_block_3(int64_t port_, struct wire_StructDefinedInBlock3 *custom);
void wire_test_method__method__EnumDefinedInBlock3(int64_t port_,
                                                   struct wire_EnumDefinedInBlock3 *that,
                                                   struct wire_uint_8_list *message);
void wire_test_static_method__static_method__EnumDefinedInBlock3(int64_t port_,
                                                                 struct wire_uint_8_list *message);
void wire_test_method__method__StructDefinedInBlock3(int64_t port_,
                                                     struct wire_StructDefinedInBlock3 *that,
                                                     struct wire_uint_8_list *message);
void wire_test_static_method__static_method__StructDefinedInBlock3(int64_t port_,
                                                                   struct wire_uint_8_list *message);
void wire_test_method__method__StructOnlyForBlock3(int64_t port_,
                                                   struct wire_StructOnlyForBlock3 *that,
                                                   struct wire_uint_8_list *message,
                                                   uint16_t num);
void wire_test_static_method__static_method__StructOnlyForBlock3(int64_t port_,
                                                                 struct wire_uint_8_list *message);
struct wire_EnumDefinedInBlock3 *new_box_autoadd_enum_defined_in_block_3(void);
struct wire_StructDefinedInBlock3 *new_box_autoadd_struct_defined_in_block_3(void);
struct wire_StructOnlyForBlock3 *new_box_autoadd_struct_only_for_block_3(void);
union EnumDefinedInBlock3Kind *inflate_EnumDefinedInBlock3_Move(void);
union EnumDefinedInBlock3Kind *inflate_EnumDefinedInBlock3_Write(void);
union EnumDefinedInBlock3Kind *inflate_EnumDefinedInBlock3_ChangeColor(void);