frb_example/pure_dart_multi/dart/lib/bridge_generated_api_block_3.io.dart


  void wire_test_shared_struct_in_block_3_for_2_and_3(
    int port_,
    ffi.Pointer<wire_SharedStructInBlock2And3> custom,
    ffi.Pointer<wire_uint_8_list> s,
    int i,
  ) {
    return _wire_test_shared_struct_in_block_3_for_2_and_3(
      port_,
      custom,
      s,
      i,
    );
  }

  late final _wire_test_shared_struct_in_block_3_for_2_and_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SharedStructInBlock2And3>, ffi.Pointer<wire_uint_8_list>,
              ffi.Int32)>>('wire_test_shared_struct_in_block_3_for_2_and_3');
  late final _wire_test_shared_struct_in_block_3_for_2_and_3 = _wire_test_shared_struct_in_block_3_for_2_and_3Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_SharedStructInBlock2And3>, ffi.Pointer<wire_uint_8_list>, int)>();

  void wire_test_cross_shared_struct_in_block_3_for_2_and_3(
    int port_,
    ffi.Pointer<wire_uint_8_list> name,
  ) {
    return _wire_test_cross_shared_struct_in_block_3_for_2_and_3(
      port_,
      name,
    );
  }

  late final _wire_test_cross_shared_struct_in_block_3_for_2_and_3Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_cross_shared_struct_in_block_3_for_2_and_3');
  late final _wire_test_cross_shared_struct_in_block_3_for_2_and_3 =
      _wire_test_cross_shared_struct_in_block_3_for_2_and_3Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  WireSyncReturn wire_test_cross_shared_struct_in_sync_in_block_3_for_2_and_3(
    ffi.Pointer<wire_uint_8_list> name,
  ) {
    return _wire_test_cross_shared_struct_in_sync_in_block_3_for_2_and_3(
      name,
    );
  }

  late final _wire_test_cross_shared_struct_in_sync_in_block_3_for_2_and_3Ptr =
      _lookup<ffi.NativeFunction<WireSyncReturn Function(ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_cross_shared_struct_in_sync_in_block_3_for_2_and_3');
  late final _wire_test_cross_shared_struct_in_sync_in_block_3_for_2_and_3 =
      _wire_test_cross_shared_struct_in_sync_in_block_3_for_2_and_3Ptr
          .asFunction<WireSyncReturn Function(ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_unique_struct_3(
    int port_,
    ffi.Pointer<wire_StructOnlyForBlock3> custom,
    ffi.Pointer<wire_uint_8_list> s,
    int i,
  ) {
    return _wire_test_unique_struct_3(
      port_,
      custom,
      s,
      i,
    );
  }

  late final _wire_test_unique_struct_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_StructOnlyForBlock3>, ffi.Pointer<wire_uint_8_list>,
              ffi.Int64)>>('wire_test_unique_struct_3');
  late final _wire_test_unique_struct_3 = _wire_test_unique_struct_3Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_StructOnlyForBlock3>, ffi.Pointer<wire_uint_8_list>, int)>();

  void wire_test_struct_defined_in_block_3(
    int port_,
    ffi.Pointer<wire_StructDefinedInBlock3> custom,
  ) {
    return _wire_test_struct_defined_in_block_3(
      port_,
      custom,
    );
  }

  late final _wire_test_struct_defined_in_block_3Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_StructDefinedInBlock3>)>>(
          'wire_test_struct_defined_in_block_3');
  late final _wire_test_struct_defined_in_block_3 =
      _wire_test_struct_defined_in_block_3Ptr.asFunction<void Function(int, ffi.Pointer<wire_StructDefinedInBlock3>)>();

  void wire_test_method__method__EnumDefinedInBlock3(
    int port_,
    ffi.Pointer<wire_EnumDefinedInBlock3> that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_method__method__EnumDefinedInBlock3(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_method__method__EnumDefinedInBlock3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_EnumDefinedInBlock3>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_test_method__method__EnumDefinedInBlock3');
  late final _wire_test_method__method__EnumDefinedInBlock3 = _wire_test_method__method__EnumDefinedInBlock3Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_EnumDefinedInBlock3>, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_method__static_method__EnumDefinedInBlock3(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__EnumDefinedInBlock3(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__EnumDefinedInBlock3Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__EnumDefinedInBlock3');
  late final _wire_test_static_method__static_method__EnumDefinedInBlock3 =
      _wire_test_static_method__static_method__EnumDefinedInBlock3Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_method__method__StructDefinedInBlock3(
    int port_,
    ffi.Pointer<wire_StructDefinedInBlock3> that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_method__method__StructDefinedInBlock3(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_method__method__StructDefinedInBlock3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_StructDefinedInBlock3>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_test_method__method__StructDefinedInBlock3');
  late final _wire_test_method__method__StructDefinedInBlock3 = _wire_test_method__method__StructDefinedInBlock3Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_StructDefinedInBlock3>, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_method__static_method__StructDefinedInBlock3(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__StructDefinedInBlock3(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__StructDefinedInBlock3Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__StructDefinedInBlock3');
  late final _wire_test_static_method__static_method__StructDefinedInBlock3 =
      _wire_test_static_method__static_method__StructDefinedInBlock3Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_method__method__StructOnlyForBlock3(
    int port_,
    ffi.Pointer<wire_StructOnlyForBlock3> that,
    ffi.Pointer<wire_uint_8_list> message,
    int num,
  ) {
    return _wire_test_method__method__StructOnlyForBlock3(
      port_,
      that,
      message,
      num,
    );
  }

  late final _wire_test_method__method__StructOnlyForBlock3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_StructOnlyForBlock3>, ffi.Pointer<wire_uint_8_list>,
              ffi.Uint16)>>('wire_test_method__method__StructOnlyForBlock3');
  late final _wire_test_method__method__StructOnlyForBlock3 = _wire_test_method__method__StructOnlyForBlock3Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_StructOnlyForBlock3>, ffi.Pointer<wire_uint_8_list>, int)>();

  void wire_test_static_method__static_method__StructOnlyForBlock3(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__StructOnlyForBlock3(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__StructOnlyForBlock3Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__StructOnlyForBlock3');
  late final _wire_test_static_method__static_method__StructOnlyForBlock3 =
      _wire_test_static_method__static_method__StructOnlyForBlock3Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  ffi.Pointer<wire_EnumDefinedInBlock3> new_box_autoadd_enum_defined_in_block_3() {
    return _new_box_autoadd_enum_defined_in_block_3();
  }

  late final _new_box_autoadd_enum_defined_in_block_3Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_EnumDefinedInBlock3> Function()>>(
          'new_box_autoadd_enum_defined_in_block_3');
  late final _new_box_autoadd_enum_defined_in_block_3 =
      _new_box_autoadd_enum_defined_in_block_3Ptr.asFunction<ffi.Pointer<wire_EnumDefinedInBlock3> Function()>();

  ffi.Pointer<wire_StructDefinedInBlock3> new_box_autoadd_struct_defined_in_block_3() {
    return _new_box_autoadd_struct_defined_in_block_3();
  }

  late final _new_box_autoadd_struct_defined_in_block_3Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_StructDefinedInBlock3> Function()>>(
          'new_box_autoadd_struct_defined_in_block_3');
  late final _new_box_autoadd_struct_defined_in_block_3 =
      _new_box_autoadd_struct_defined_in_block_3Ptr.asFunction<ffi.Pointer<wire_StructDefinedInBlock3> Function()>();

  ffi.Pointer<wire_StructOnlyForBlock3> new_box_autoadd_struct_only_for_block_3() {
    return _new_box_autoadd_struct_only_for_block_3();
  }

  late final _new_box_autoadd_struct_only_for_block_3Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_StructOnlyForBlock3> Function()>>(
          'new_box_autoadd_struct_only_for_block_3');
  late final _new_box_autoadd_struct_only_for_block_3 =
      _new_box_autoadd_struct_only_for_block_3Ptr.asFunction<ffi.Pointer<wire_StructOnlyForBlock3> Function()>();

  ffi.Pointer<EnumDefinedInBlock3Kind> inflate_EnumDefinedInBlock3_Move() {
    return _inflate_EnumDefinedInBlock3_Move();
  }

  late final _inflate_EnumDefinedInBlock3_MovePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<EnumDefinedInBlock3Kind> Function()>>('inflate_EnumDefinedInBlock3_Move');
  late final _inflate_EnumDefinedInBlock3_Move =
      _inflate_EnumDefinedInBlock3_MovePtr.asFunction<ffi.Pointer<EnumDefinedInBlock3Kind> Function()>();

  ffi.Pointer<EnumDefinedInBlock3Kind> inflate_EnumDefinedInBlock3_Write() {
    return _inflate_EnumDefinedInBlock3_Write();
  }

  late final _inflate_EnumDefinedInBlock3_WritePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<EnumDefinedInBlock3Kind> Function()>>('inflate_EnumDefinedInBlock3_Write');
  late final _inflate_EnumDefinedInBlock3_Write =
      _inflate_EnumDefinedInBlock3_WritePtr.asFunction<ffi.Pointer<EnumDefinedInBlock3Kind> Function()>();

  ffi.Pointer<EnumDefinedInBlock3Kind> inflate_EnumDefinedInBlock3_ChangeColor() {
    return _inflate_EnumDefinedInBlock3_ChangeColor();
  }

  late final _inflate_EnumDefinedInBlock3_ChangeColorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<EnumDefinedInBlock3Kind> Function()>>(
          'inflate_EnumDefinedInBlock3_ChangeColor');
  late final _inflate_EnumDefinedInBlock3_ChangeColor =
      _inflate_EnumDefinedInBlock3_ChangeColorPtr.asFunction<ffi.Pointer<EnumDefinedInBlock3Kind> Function()>();
}

final class _Dart_Handle extends ffi.Opaque {}

final class wire_CrossSharedStructInBlock1And2 extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> name;
}

final class wire_SharedComplexEnumInAllBlocks_Empty extends ffi.Opaque {}

final class wire_SharedComplexEnumInAllBlocks_Primitives extends ffi.Struct {
  @ffi.Int32()
  external int int32;

  @ffi.Double()
  external double float64;

  @ffi.Bool()
  external bool boolean;
}

final class wire_SharedComplexEnumInAllBlocks_Nested extends ffi.Struct {
  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks> field0;
}

final class SharedComplexEnumInAllBlocksKind extends ffi.Union {
  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Empty> Empty;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Primitives> Primitives;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Nested> Nested;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Optional> Optional;
